# melon

./: .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  ILLEGAL_CONTRIBUTION.md  README.md  appveyor.yml  configure-llvm.sh  setup_environment.py  testbranch.cpp
.github/workflows/: android.yml  build.yml  codeql-analysis.yml  linux-macos.yml  set_environment_variables.py  windows.yml
.github/workflows/android/: Dockerfile
.github/workflows/android-env/: Dockerfile
build-config/android/: Dockerfile
build-config/android-env/: Dockerfile
build-config/android-env/android-aarch64-boost/: .SRCINFO  PKGBUILD
build-config/android-env/android-ndk/: PKGBUILD
build-config/patches/cyrus-sasl-2.1.27/: gdbm_errno.patch
build-config/patches/msgpack-3.3.0/: struct_iovec.patch
build-config/scripts/: android-configure-base.sh  android_configure_base.sh  windows-configure.sh  windows-lebedev-utils.sh  windows_configure_base.sh  windows_lebedev_utils.sh
cmake/: FindSqlpp11ConnectorMysql.cmake
cmake/ntc/: ntc-dev-build.cmake  ntc-target-helpers.cmake
docs/: CONFIGURATION.md  codestyle-cpp.md  contribution-guide.md
patches/boost-1.75.0/: asio-fix-outstanding-work-tracked-executor-move-assignment.patch  container-fix-141.patch  move-fix-35.patch  polymorphic-allocator-noexcept.patch  throw_exception-fix-BOOST_EXCEPTION_DISABLE.patch
src/: default.profraw
src/client-android/: .gitignore  README.md  build.gradle  settings.gradle
src/client-android/app/: build.gradle
src/client-android/app/src/main/: AndroidManifest.xml
src/client-android/app/src/main/res/layout/: activity_main.xml  fragment_start.xml
src/client-android/app/src/main/res/navigation/: nav_graph.xml  nav_graph_main.xml
src/client-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
src/client-android/app/src/main/res/values-night/: themes.xml
src/client-android/core/: build.gradle
src/client-android/core/src/main/: AndroidManifest.xml
src/client-android/core/src/main/res/values/: strings.xml
src/client-android/feature_chat_content/: build.gradle
src/client-android/feature_chat_content/src/main/: AndroidManifest.xml
src/client-android/feature_chat_content/src/main/res/drawable/: background_other_message.xml  background_selected_user_message.xml  background_user_message.xml
src/client-android/feature_chat_content/src/main/res/layout/: fragment_chat_content.xml  item_attached_file.xml  item_message_file_item.xml  item_other_message.xml  item_user_file_message.xml  item_user_message.xml
src/client-android/feature_chat_content/src/main/res/menu/: menu_chat_content_actions.xml
src/client-android/feature_chat_content/src/main/res/navigation/: chat_content_nav_graph.xml  (+1 more)
src/client-android/feature_chats_list/: build.gradle
src/client-android/feature_chats_list/src/main/: AndroidManifest.xml
src/client-android/gradle/wrapper/: gradle-wrapper.properties
src/client-android/jniwrapper/: build.gradle
src/client-android/jniwrapper/src/main/: AndroidManifest.xml
src/client-android/jniwrapper/src/main/cpp/: CMakeLists.txt  hello-jni.cpp
src/client-desktop/: CMakeLists.txt  chat_widget.cpp
src/client-desktop/include/: chat_item_delegate.hpp  chat_item_delegate.hpp.autosave  chat_list_model.hpp  chat_list_view.hpp  chat_list_widget.hpp  chat_widget.hpp  chat_widget_model.hpp  config.hpp  config.ipp  db_storage.hpp  db_storage.hpp.autosave  db_storage.ipp  entities_db.hpp  entities_db.ipp  entities_qt.hpp  entities_qt.ipp  helpers.hpp  main_window.hpp  mainwindow.h  message_item_delegate.hpp  message_list_model.hpp  message_list_view.hpp  ram_storage.hpp  ram_storage.ipp  settings_dialog.hpp  storage_singletones.hpp  storage_singletones.ipp
src/client-desktop/src/: chat_item_delegate.cpp  chat_list_model.cpp  chat_list_view.cpp  chat_list_widget.cpp  chat_widget.cpp  chat_widget_model.cpp  config.cpp  db_storage.cpp  entities_db.cpp  main.cpp  main_window.cpp  mainwindow.cpp  message_item_delegate.cpp  message_list_model.cpp  message_list_view.cpp  ram_storage.cpp  settings_dialog.cpp  storage_singletones.cpp
src/client-desktop/translations/: melon-client-desktop_en_US.ts
src/client-desktop/ui/: chat_widget.ui  dialog.ui  main_window.ui  settings_dialog.ui
src/core/: CMakeLists.txt
src/core/include/: melon_core.hpp  yaml_config.hpp
src/core/include/melon/: core.hpp  jni_tests.hpp  storage_class.hpp
src/core/include/melon/core/: auth.hpp  auth.ipp  commands.hpp  entities.hpp  entities.ipp  exception.hpp  jni_tests.hpp  log_configuration.hpp  sasl_client_wrapper.hpp  sasl_client_wrapper.ipp  serialization.hpp  session.hpp  storage_class.hpp  storage_class.ipp  token.hpp  yaml_config.hpp
src/core/src/: entities.cpp  exception.cpp  jni_tests.cpp  log_configuration.cpp  melon_core.cpp  serialization.cpp  storage_class.cpp  yaml_config.cpp
src/server/: CMakeLists.txt
src/server/auth/: CMakeLists.txt  README.md
src/server/auth/asio-utils/: CMakeLists.txt
src/server/auth/include/: sasl_server_wrapper.hpp  sasl_server_wrapper.ipp  sasl_wrapper.hpp  sasl_wrapper.hpp.autosave  sasl_wrapper.ipp  sasl_wrapper_client.hpp
src/server/auth/scripts/: setupserver.sh
src/server/auth/src/: main.cpp  main.cpp.autosave  sasl_wrapper.cpp  test.cpp  test_client.cpp  test_main.cpp
src/server/client-server/: CMakeLists.txt
src/server/client-server/src/: main.cpp  test_client.cpp
src/server/messaging/: CMakeLists.txt
src/server/server-server/: CMakeLists.txt
src/server/server-server/src/: main.cpp
src/server/storage/: CMakeLists.txt  README.md  Readme
src/server/storage/include/: config_db.hpp  entities.hpp  melondb.h  melondb.h.h  storage.hpp
src/server/storage/include/melon/: storage.hpp
src/server/storage/script/: ddl2cpp.py  melondb.sql
src/server/storage/scripts/: mysql_secure_installation.sh
src/server/storage/sql/: db_scheme_dump.sql
src/server/storage/src/: config_db.cpp  entities.cpp  main.cpp  melon_storage.cpp  melondb.h  new_main.cpp  storage.cpp  storage_tests.cpp  test_main.cpp  tests.cpp  tests_main.cpp
(+115 files in other folders)
